--- a/index.html
+++ b/index.html
@@ -2122,8 +2122,10 @@ function myFunction155()
 
 <center>
     <br/>
-     <a href="https://rubikenglish.github.io/JONALINGO3/">Anterior</a>
-     <a href="https://rubikenglish.github.io/JONALINGO5/">Siguiente</a>
+    <a href="https://rubikenglish.github.io/Jonalingo/" style= text-decoration:none;><<</a>
+    <a href="https://rubikenglish.github.io/JONALINGO3/"style= text-decoration:none;>Anterior</a>
+    <a href="https://rubikenglish.github.io/JONALINGO5/"style= text-decoration:none;>Siguiente</a>
+    <a href="https://rubikenglish.github.io/JONALINGO7/"style= text-decoration:none;>>></a>
 </center>
 
 
