--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 </head>
 <body>
 
-
-<h3>"The Emperor and the Kite"</h3>
-<h3>"El Emperador y la Cometa"</h3>
+<center>
+        <h3>"The Emperor and the Kite"</h3>
+        <h3>"El Emperador y la Cometa"</h3>
+</center>
 
 <!--41 PARRAFO 41-->
 
